--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -9,7 +9,7 @@ global:
   # imagePullSecrets:
   #   - name: image-pull-secret
   # TLS for end-to-end encrypted transport
-  tlsDisable: true
+  tlsDisable: ${tls_disabled}
 
 injector:
   # True if you want to enable vault agent injection.
