--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -285,7 +285,7 @@ server:
     size: ${data_storage_size}
     # Name of the storage class to use.  If null it will use the
     # configured default Storage Class.
-    storageClass: ""
+    storageClass: ${storage_class}
     # Access Mode of the storage device being used for the PVC
     accessMode: ReadWriteOnce
 
