--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -9,7 +9,7 @@ global:
   # imagePullSecrets:
   #   - name: image-pull-secret
   # TLS for end-to-end encrypted transport
-  tlsDisable: ${tls_disabled}
+  tlsDisable: false
 
 injector:
   # True if you want to enable vault agent injection.
@@ -285,7 +285,7 @@ server:
     size: ${data_storage_size}
     # Name of the storage class to use.  If null it will use the
     # configured default Storage Class.
-    storageClass: ""
+    storageClass: ${storage_class}
     # Access Mode of the storage device being used for the PVC
     accessMode: ReadWriteOnce
 
