--- a/modules/consul_backup/templates/values.yaml
+++ b/modules/consul_backup/templates/values.yaml
@@ -12,6 +12,9 @@ image:
 
 consul:
   address: ${consul_address}
+  tls:
+    enabled: ${tls_enabled}
+    cacert: ${tls_cacert}
 
 nodeSelector: ${node_selector}
 
@@ -22,19 +25,7 @@ affinity: ${affinity}
 gcs:
   bucket: ${gcs_bucket}
   prefix: ${gcs_prefix}
-
-vault:
-  enabled: ${enable_vault_agent}
-  pullPolicy: IfNotPresent
-  address: ${vault_address}
-  # PEM encoded CA used to issue Vault's Certificate
-  ca: ${vault_ca}
-  auth:
-    path: ${vault_auth_path}
-    role: ${vault_auth_role}
-  gcp:
-    path: ${vault_gcp_path}
-  env: []
+  serviceAccountKey: ${service_account_key}
 
 env: ${env}
 
