--- a/modules/vault/templates/values.yaml
+++ b/modules/vault/templates/values.yaml
@@ -330,7 +330,7 @@ server:
     # Size of the PVC created
     size: ${data_storage_size}
     # Location where the PVC will be mounted.
-    mountPath: "/vault/audit"
+    mountPath: "/vault/data"
     # Name of the storage class to use.  If null it will use the
     # configured default Storage Class.
     storageClass: ${storage_class}
